# stack-tag

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  package.yaml  stack-tag.cabal  stack.yaml
.circleci/: config.yml
app/: Main.hs
src/Control/Concurrent/Async/: Pool.hs
src/Stack/: Tag.hs
test/: Spec.hs
