name:                stack-tag
version:             0.1.0.0
synopsis:            Generate ctags/etags for stack based projects
homepage:            https://github.com/creichert/stack-tag
license:             BSD3
license-file:        LICENSE
author:              Christopher Reichert <creichert07@gmail.com>
maintainer:          Christopher Reichert <creichert07@gmail.com>
copyright:           (c) 2015 Christopher Reichert
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
description:         Generate ctags/etags for stack based projects

library
  hs-source-dirs:      src
  exposed-modules:     Stack.Tag
  other-modules:       Control.Concurrent.Async.Pool
  default-language:    Haskell2010
  build-depends:       base >= 4.5 && < 5
                     , transformers
                     , mtl
                     , process
                     , containers
                     , directory
                     , text
                     , async

executable stack-tag
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N2
  default-language:    Haskell2010
  build-depends:       base
                     , stack-tag
                     , optparse-applicative

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N2
  build-depends:       base
                     , stack-tag
                     -- , hspec
                     -- , HUnit
                     -- , QuickCheck

source-repository head
  type:     git
  location: https://github.com/creichert/stack-tag
